--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "openai": "^3.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -30,10 +32,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "jest": "^27.0.5",
+    "naive-ui": "^2.34.4",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
+    "vfonts": "^0.0.3",
     "vite": "^2.5.4"
   },
   "eslintConfig": {
